# PlugNode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plugnode.lua  plugnode.toml
app/: CMakeLists.txt  dx11_renderer.cpp  dx11_renderer.h  gui.cpp  lua_plugnode.cpp  lua_plugnode.h  main.cpp  orbit_camera.h  win32_window.cpp
common/: window_state.h
gui/: CMakeLists.txt  context.cpp  context.h  gui.cpp  lua_plugnode.cpp  node.cpp  node.h  nodecanvas.cpp  nodecanvas.h  nodedefinition.cpp  nodedefinition.h  nodegraph.cpp  nodegraph.h  nodescene.cpp  nodescene.h  nodeslot.cpp  nodeslot.h  plugnode.cpp  plugnode.h
gui/nodeslot/: nodeslot.cpp  nodeslot.h  nodeslot_in.h  nodeslot_out.h
plugnode/: CMakeLists.txt  dx11_renderer.cpp  dx11_renderer.h  gui.h  lua_plugnode.cpp  main.cpp  nodedefinition.h  noged.h  orbit_camera.cpp  plugnode.h
scripts/: _main.lua  calc.lua  imgui.ini  plugnode.lua  shader.lua
